--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -2,28 +2,100 @@
     "cells": [
         {
             "cell_type": "markdown",
+            "metadata": {},
             "source": [
                 "# Example usage\n",
                 "\n",
-                "To use `pycounts_jd25` in a project:"
+                "Here we will demonstrate how to use pycounts to count the words in a text file and plot the top 5 results.\n",
+                "\n",
+                "## Imports"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 1,
+            "metadata": {},
+            "outputs": [
+                {
+                    "ename": "ModuleNotFoundError",
+                    "evalue": "No module named 'pycounts_jd25'",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+                        "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpycounts_jd25\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pyplot \u001b[38;5;28;01mas\u001b[39;00m plt\n",
+                        "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pycounts_jd25'"
+                    ]
+                }
             ],
-            "metadata": {}
+            "source": [
+                "import pycounts_jd25.pycounts_jd25 import count_words\n",
+                "import pycounts_jd25.plotting import plot_words\n",
+                "\n",
+                "from matplotlib import pyplot as plt"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Create a text file\n",
+                "\n",
+                "We'll first create a text file to work with using a famous quote from Einstein:"
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "source": [
-                "import pycounts_jd25\n",
-                "\n",
-                "print(pycounts_jd25.__version__)"
-            ],
+            "metadata": {},
             "outputs": [],
-            "metadata": {}
+            "source": [
+                "quote = \"Insanity is doing the same thing over and over and expecting different results.\"\n",
+                "with open(\"einstein.txt\", \"w\") as file:\n",
+                "    file.write(quote)\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Count words\n",
+                "\n",
+                "We can count the words in our text file using the `count_words()`` function. Note that this function removes punctuation and makes all words lowercase before counting."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "counts = count_words(\"einstein.txt\")\n",
+                "print(counts)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Plot words\n",
+                "\n",
+                "We can now plot the result using the plot_words() function:"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "fig = plot_words(counts, n=5)"
+            ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "573",
             "language": "python",
             "name": "python3"
         },
@@ -37,7 +109,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.5"
+            "version": "3.11.10"
         }
     },
     "nbformat": 4,
